--- a/Admin/templates/Admin/base_form_css.html
+++ b/Admin/templates/Admin/base_form_css.html
@@ -5,13 +5,15 @@
 <link href="{% static 'inspinia/css/plugins/cropper/cropper.min.css' %}" rel="stylesheet">
 <link href="{% static 'inspinia/css/plugins/switchery/switchery.css' %}" rel="stylesheet">
 {#  <link href="{% static 'inspinia/css/plugins/nouslider/jquery.nouislider.css' %}" rel="stylesheet">#}
-<link href="{% static 'inspinia/css/plugins/datapicker/datepicker3.css' %}" rel="stylesheet">
+{#<link href="{% static 'inspinia/css/plugins/datapicker/datepicker3.css' %}" rel="stylesheet">#}
 {#  <link href="{% static 'inspinia/css/plugins/ionRangeSlider/ion.rangeSlider.css' %}" rel="stylesheet">#}
 <link href="{% static 'inspinia/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css' %}"
       rel="stylesheet">
 <link href="{% static 'inspinia/css/plugins/clockpicker/clockpicker.css' %}" rel="stylesheet">
-<link href="{% static 'inspinia/css/plugins/daterangepicker/daterangepicker-bs3.css' %}" rel="stylesheet">
+{#<link href="{% static 'inspinia/css/plugins/daterangepicker/daterangepicker-bs3.css' %}" rel="stylesheet">#}
 <link href="{% static 'inspinia/css/plugins/select2/select2.min.css' %}" rel="stylesheet">
 <link href="{% static 'inspinia/css/plugins/select2/select2-bootstrap4.min.css' %}" rel="stylesheet">
 {#  <link href="{% static 'inspinia/css/plugins/touchspin/jquery.bootstrap-touchspin.min.css' %}" rel="stylesheet">#}
 {#  <link href="{% static 'inspinia/css/plugins/dualListbox/bootstrap-duallistbox.min.css' %}" rel="stylesheet">#}
+
+<link href="{% static 'plugins/bootstrap-datepicker/bootstrap-datetimepicker.min.css' %}" rel="stylesheet">
