--- a/Admin/templates/Admin/base_form_js.html
+++ b/Admin/templates/Admin/base_form_js.html
@@ -5,16 +5,18 @@
 <script src="{% static 'inspinia/js/plugins/dropzone/dropzone.js' %}"></script>
 {#<script src="{% static 'inspinia/js/plugins/jsKnob/jquery.knob.js' %}"></script>#}
 <script src="{% static 'inspinia/js/plugins/jqueryMask/jquery.mask.min.js' %}"></script>
-<script src="{% static 'inspinia/js/plugins/datapicker/bootstrap-datepicker.js' %}"></script>
+{#<script src="{% static 'inspinia/js/plugins/datapicker/bootstrap-datepicker.js' %}"></script>#}
 {#<script src="{% static 'inspinia/js/plugins/nouslider/jquery.nouislider.min.js' %}"></script>#}
 <script src="{% static 'inspinia/js/plugins/switchery/switchery.js' %}"></script>
 {#<script src="{% static 'inspinia/js/plugins/ionRangeSlider/ion.rangeSlider.min.js' %}"></script>#}
 <script src="{% static 'inspinia/js/plugins/iCheck/icheck.min.js' %}"></script>
 <script src="{% static 'inspinia/js/plugins/colorpicker/bootstrap-colorpicker.min.js' %}"></script>
-<script src="{% static 'inspinia/js/plugins/clockpicker/clockpicker.js' %}"></script>
+{#<script src="{% static 'inspinia/js/plugins/clockpicker/clockpicker.js' %}"></script>#}
 <script src="{% static 'inspinia/js/plugins/fullcalendar/moment.min.js' %}"></script>
-<script src="{% static 'inspinia/js/plugins/daterangepicker/daterangepicker.js' %}"></script>
+{#<script src="{% static 'inspinia/js/plugins/daterangepicker/daterangepicker.js' %}"></script>#}
 <script src="{% static 'inspinia/js/plugins/select2/select2.full.min.js' %}"></script>
 {#<script src="{% static 'inspinia/js/plugins/touchspin/jquery.bootstrap-touchspin.min.js' %}"></script>#}
 <script src="{% static 'inspinia/js/plugins/bootstrap-tagsinput/bootstrap-tagsinput.js' %}"></script>
 {#<script src="{% static 'inspinia/js/plugins/dualListbox/jquery.bootstrap-duallistbox.js' %}"></script>#}
+
+<script src="{% static 'plugins/bootstrap-datepicker/bootstrap-datetimepicker.min.js' %}"></script>
