--- a/Admin/templates/Admin/base/forms/fields/inputs/datetime_input.html
+++ b/Admin/templates/Admin/base/forms/fields/inputs/datetime_input.html
@@ -1,8 +1,8 @@
 {% load i18n widget_tweaks %}
 
-<div class="input-group date">
-  <span class="input-group-addon">
+<div class="input-group date datetimepicker">
+  <div class="input-group-addon input-group-append">
     <i class="fa fa-calendar"></i>
-  </span>
+  </div>
   {% render_field field class+="form-control" %}
 </div>
