--- a/Admin/templates/Admin/base/tables/components/table.html
+++ b/Admin/templates/Admin/base/tables/components/table.html
@@ -26,7 +26,7 @@
       {% block table.tbody.row %}
         <tr {{ row.attrs.as_html }}>
           {% for column, cell in row.items %}
-            <td {{ column.attrs.td.as_html }}>
+            <td {{ column.attrs.td.as_html }} class="table-{{ column.header|slugify|default:"noname" }}-field">
               {% if column.localize == None %}{{ cell }}{% else %}{% if column.localize %}{{ cell|localize }}
               {% else %}{{ cell|unlocalize }}{% endif %}{% endif %}</td>
           {% endfor %}
