MP-8 Medicine handbooks: - Add celery task to load allergy causes

--- a/Admin/templates/Admin/Medicine/AllergyCause/list.html
+++ b/Admin/templates/Admin/Medicine/AllergyCause/list.html
@@ -10,7 +10,10 @@
              href="{% host_url 'medicine:allergy-causes-export-json' host 'admin' %}">{% trans 'Export (.json)' %}</a>
       </li>
       <li><a class="dropdown-item"
-             href="{% host_url 'medicine:allergy-causes-export-csv' host 'admin' %}">{% trans 'Export (.csv)' %}</a></li>
+             href="{% host_url 'medicine:allergy-causes-export-csv' host 'admin' %}">{% trans 'Export (.csv)' %}</a>
+      </li>
+      <li><a class="dropdown-item"
+             href="{% host_url 'medicine:allergy-causes-sync' host 'admin' %}">{% trans 'Sync' %}</a></li>
     </ul>
   </div>
 {% endblock %}
