--- a/Admin/templates/Admin/Medicine/ICD10/list.html
+++ b/Admin/templates/Admin/Medicine/ICD10/list.html
@@ -11,6 +11,8 @@
       </li>
       <li><a class="dropdown-item"
              href="{% host_url 'medicine:icd10-export-csv' host 'admin' %}">{% trans 'Export (.csv)' %}</a></li>
+      <li><a class="dropdown-item"
+             href="{% host_url 'medicine:icd10-sync' host 'admin' %}">{% trans 'Sync' %}</a></li>
     </ul>
   </div>
 {% endblock %}
