--- a/Admin/templates/Admin/base/forms/fields/inputs/color_input.html
+++ b/Admin/templates/Admin/base/forms/fields/inputs/color_input.html
@@ -1,3 +1,3 @@
 {% load i18n widget_tweaks %}
 
-{% render_field field class+="form-control" %}
+{% render_field field class+="form-control colorpicker" %}
