--- a/Admin/templates/Admin/ClinicSettings/EmployeeColors/list.html
+++ b/Admin/templates/Admin/ClinicSettings/EmployeeColors/list.html
@@ -1,5 +1,5 @@
 {% extends 'Admin/ClinicSettings/EmployeeColors/base.html' %}
-{% load i18n hosts %}
+{% load i18n hosts static %}
 
 {% block action-area %}
   <a href="{% host_url 'clinic-settings:employee-color-add' host 'admin' %}" class="btn btn-primary dim"
@@ -24,4 +24,8 @@
 
 {% block content %}
   {% include 'Admin/base/tables/table.html' %}
+{% endblock %}
+
+{% block extrajs %}
+  <script src="{% static 'admin/ClinicSettings/EmployeeColors/set-default-list.js' %}"></script>
 {% endblock %}
