MPO-24 Add currency handbook: - Add admin views, forms, tables, HTMLs - Make currency code unique

--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -69,6 +69,9 @@
             <li class="{% block menu-handbooks-country-active %}{% endblock %}">
               <a href="{% host_url 'handbooks:country-list' host 'admin' %}">{% trans 'Countries' %}</a>
             </li>
+            <li class="{% block menu-handbooks-currency-active %}{% endblock %}">
+              <a href="{% host_url 'handbooks:currency-list' host 'admin' %}">{% trans 'Currencies' %}</a>
+            </li>
           </ul>
         </li>
 
