MPO-38 Update admin pages: - apply record_label via tags (Update HrefColumn and HTML that render field)

--- a/Admin/templates/Admin/base/forms/form.html
+++ b/Admin/templates/Admin/base/forms/form.html
@@ -1,4 +1,4 @@
-{% load i18n widget_tweaks filters %}
+{% load i18n widget_tweaks custom_tags %}
 
 <form {% if form.id %}id="{{ form.id }}"{% endif %} role="form" action="{{ form.action|default:'' }}"
       method="{{ form.method|default:'post' }}" novalidate enctype="multipart/form-data">
