MPO-41 Update admin clinic pre-settings: - Add admin clinic pre-settings dynamic render of content in form - Add required JQuery code

--- a/Admin/templates/Admin/ClinicSettings/ClinicPreSettings/add.html
+++ b/Admin/templates/Admin/ClinicSettings/ClinicPreSettings/add.html
@@ -13,3 +13,7 @@
 {% block content %}
   {% include 'Admin/base/forms/form.html' %}
 {% endblock %}
+
+{% block extrajs %}
+  {% include 'Admin/ClinicSettings/ClinicPreSettings/form_extrajs.html' %}
+{% endblock %}
