--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -182,6 +182,7 @@
 {% include 'Admin/base_table_js.html' %}
 
 <script src="{% static 'admin/js/base.js' %}"></script>
+<script src="{% static 'admin/js/select2-utils.js' %}"></script>
 
 <script src="{% static 'inspinia/js/plugins/sweetalert/sweetalert.min.js' %}"></script>
 <script src="{% static 'admin/js/archive-restore.js' %}"></script>
