--- a/Admin/templates/Admin/ClinicSettings/ClinicPreSettings/edit.html
+++ b/Admin/templates/Admin/ClinicSettings/ClinicPreSettings/edit.html
@@ -16,3 +16,7 @@
 {% block content %}
   {% include 'Admin/base/forms/form.html' %}
 {% endblock %}
+
+{% block extrajs %}
+  {% include 'Admin/ClinicSettings/ClinicPreSettings/form_extrajs.html' %}
+{% endblock %}
