--- a/Admin/templates/Admin/base/tables/columns/id_template.html
+++ b/Admin/templates/Admin/base/tables/columns/id_template.html
@@ -1,3 +1,3 @@
 {% load hosts custom_tags %}
 
-<a href="{% host_url reverse_url record.id host 'admin' %}">{{ record|get_attr:record_label }}</a>
+<a href="{% host_url reverse_url record|get_attr:reverse_field host 'admin' %}">{{ record|get_attr:record_label }}</a>
