MPO-26 Add handbook update log: - Add handbook update log creation on medicine call of commands

--- a/Admin/templates/Admin/base/tables/columns/id_template.html
+++ b/Admin/templates/Admin/base/tables/columns/id_template.html
@@ -1,3 +1,9 @@
-{% load hosts custom_tags %}
+{% load i18n hosts custom_tags %}
 
-<a href="{% host_url reverse_url record|get_attr:reverse_field host 'admin' %}">{{ record|get_attr:record_label }}</a>
+{% with record|get_attr:reverse_field as reverse_value %}
+  {% if reverse_value %}
+    <a href="{% host_url reverse_url record|get_attr:reverse_field host 'admin' %}">{{ record|get_attr:record_label }}</a>
+  {% else %}
+    {% trans 'Not provided' %}
+  {% endif %}
+{% endwith %}
