MPO-50 Add admins pages: - Add set password for user if is superuser

--- a/Admin/templates/Admin/Admins/view.html
+++ b/Admin/templates/Admin/Admins/view.html
@@ -15,6 +15,10 @@
      class="btn btn-w-m btn-info">{% trans 'Back to list' %}</a>
   <a href="{% host_url 'admins-edit' user.id host 'admin' %}" type="button"
      class="btn btn-w-m btn-info">{% trans 'Edit' %}</a>
+  {% if request.user.is_superuser %}
+    <a href="{% host_url 'admins-set-password' user.id host 'admin' %}" type="button"
+       class="btn btn-w-m btn-info">{% trans 'Set password' %}</a>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -85,6 +89,16 @@
               <span class="label label-primary">{% trans 'Superuser' %}</span>
             {% else %}
               <span class="label label-danger">{% trans 'Not superuser' %}</span>
+            {% endif %}
+          </td>
+        </tr>
+        <tr>
+          <th>{% trans 'Has password' %}</th>
+          <td>
+            {% if user.password %}
+              <span class="label label-primary">{% trans 'Presented' %}</span>
+            {% else %}
+              <span class="label label-danger">{% trans 'Not presented' %}</span>
             {% endif %}
           </td>
         </tr>
