--- a/Admin/templates/Admin/base/non_field_errors.html
+++ b/Admin/templates/Admin/base/non_field_errors.html
@@ -1,5 +1,7 @@
-{% for error in form.non_field_errors %}
-  <span class="text-danger">
-    {{ error }}
-  </span>
-{% endfor %}
+{% if form.non_field_errors %}
+  <div class="alert alert-warning">
+    {% for error in form.non_field_errors %}
+      <div>{{ error }}</div>
+    {% endfor %}
+  </div>
+{% endif %}
