MPO-50 Add admins pages: - Fix creation of administrators - Fix queryset of admins

--- a/Admin/templates/Admin/Admins/base.html
+++ b/Admin/templates/Admin/Admins/base.html
@@ -6,6 +6,6 @@
 
 {% block breadcrumb %}
   <li class="breadcrumb-item">
-    <a href="{% host_url 'admins-list' host 'admin' %}">{% trans 'Clinic pre-settings' %}</a>
+    <a href="{% host_url 'admins-list' host 'admin' %}">{% trans 'Admins' %}</a>
   </li>
 {% endblock %}
