MPO-50 Add admins pages: - Add password informer

--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -17,6 +17,7 @@
 
   {% include 'Admin/base_form_css.html' %}
   {% include 'Admin/base_table_css.html' %}
+  <link href="{% static 'admin/css/base.css' %}" rel="stylesheet">
   {% block extracss %}{% endblock %}
 </head>
 
