--- a/Admin/templates/Admin/base/forms/form.html
+++ b/Admin/templates/Admin/base/forms/form.html
@@ -3,6 +3,11 @@
 <form {% if form.id %}id="{{ form.id }}"{% endif %} role="form" action="{{ form.action|default:'' }}"
       method="{{ form.method|default:'post' }}" novalidate enctype="multipart/form-data">
   {% if form.skip_csf_token %}{% else %}{% csrf_token %}{% endif %}
+
+  {% if form.informer %}
+    <div class="alert alert-info">{{ form.informer|safe|escape }}</div>
+  {% endif %}
+
   {% include 'Admin/base/non_field_errors.html' with form=form.form_body %}
 
   {% for field in form.form_body %}
@@ -33,7 +38,7 @@
         {% elif class|is_in:'CheckboxInput' %}
           {% include 'Admin/base/forms/fields/label.html' with field=field %}
           {% include 'Admin/base/forms/fields/inputs/checkbox_input.html' with field=field %}
-        {% comment %}{% elif class|is_in:'RadioSelect' %}
+          {% comment %}{% elif class|is_in:'RadioSelect' %}
           {% include 'Admin/base/forms/fields/label.html' with field=field %}
           {% include 'Admin/base/forms/fields/inputs/radio_input.html' with field=field %}{% endcomment %}
         {% else %}
