--- a/Admin/templates/Admin/base/forms/form.html
+++ b/Admin/templates/Admin/base/forms/form.html
@@ -41,6 +41,9 @@
           {% comment %}{% elif class|is_in:'RadioSelect' %}
           {% include 'Admin/base/forms/fields/label.html' with field=field %}
           {% include 'Admin/base/forms/fields/inputs/radio_input.html' with field=field %}{% endcomment %}
+        {% elif class|is_in:'PasswordInput' %}
+          {% include 'Admin/base/forms/fields/label.html' with field=field %}
+          {% include 'Admin/base/forms/fields/inputs/password_input.html' with field=field %}
         {% else %}
           {% include 'Admin/base/forms/fields/label.html' with field=field %}
           {% include 'Admin/base/forms/fields/input.html' with field=field %}
