MPO-14 Update admin medicine pages: - Add "sync" views to medicine - Update medicine main template

--- a/Admin/templates/Admin/Medicine/home.html
+++ b/Admin/templates/Admin/Medicine/home.html
@@ -30,7 +30,7 @@
     <div class="col-lg-3">
       <div class="widget style1">
         <div class="row">
-          <div class="col-4">
+          <div class="col-4 text-center">
             <a href="https://hl7.org/fhir/valueset-allergyintolerance-code.html"
                target="_blank">
               <i class="fa fa-link fa-5x"></i>
@@ -46,7 +46,7 @@
     <div class="col-lg-3">
       <div class="widget style1">
         <div class="row">
-          <div class="col-4">
+          <div class="col-4 text-center">
             <a href="https://build.fhir.org/ig/hl7ch/ch-term/ValueSet-CHAllergyIntoleranceReactionManifestationValueSet.html"
                target="_blank">
               <i class="fa fa-link fa-5x"></i>
@@ -62,7 +62,7 @@
     <div class="col-lg-3">
       <div class="widget style1">
         <div class="row">
-          <div class="col-4">
+          <div class="col-4 text-center">
             <a href="https://www.cms.gov/medicare/coordination-benefits-recovery/overview/icd-code-lists"
                target="_blank">
               <i class="fa fa-link fa-5x"></i>
