--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -212,6 +212,7 @@
 
 <script src="{% static 'inspinia/js/plugins/sweetalert/sweetalert.min.js' %}"></script>
 <script src="{% static 'admin/js/archive-restore.js' %}"></script>
+<script src="{% static 'admin/js/wserver.js' %}"></script>
 
 {% block extrajs %}{% endblock %}
 </body>
